# STM32_Low-Level-Programming_VSCode

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  linker.ld  makefile  startup.s  test.c
bsp/include/: bgt_w87x.h  bsp.h  sd.h  system.h  uart1.h  usart1_rs485.h
bsp/source/: bgt_w87x.c  sd.c  system.c  uart1.c  usart1_rs485.c
cmake/: toolchain-mertani_2.5.cmake
core/include/: sd_init.h  system.h  thread_button.h  thread_log_data.h  thread_sensor.h  uart1_init.h
core/source/: main.c  thread_button.c  thread_log_data.c  thread_sensor.c  usart1_rs485_init.c
inc/: usart1_rs485_init.h
src/: sd_init.c  system.c  uart1_init.c
